language/move-lang/tests/move_check/typing/assign_unpack_references.exp
error: 

    ┌── tests/move_check/typing/assign_unpack_references.move:20:14 ───
    │
 20 │         f; s2;
    │              ^ Invalid return
    ·
 17 │         R { s1: S { f }, s2 } = &R { s1: S{f: 0}, s2: S{f: 1} }; f; s2;
    │                                  ------------------------------ The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
    ·
 17 │         R { s1: S { f }, s2 } = &R { s1: S{f: 0}, s2: S{f: 1} }; f; s2;
    │                                  ------------------------------ The type '0x8675309::M::R' does not have the ability 'drop'
    ·
  3 │     struct R { s1: S, s2: S }
    │            - To satisify the constraint, the 'drop' ability would need to be added here
    │

error: 

    ┌── tests/move_check/typing/assign_unpack_references.move:30:14 ───
    │
 30 │         f; s2;
    │              ^ Invalid return
    ·
 27 │         R { s1: S { f }, s2 } = &mut R { s1: S{f: 0}, s2: S{f: 1} }; f; s2;
    │                                      ------------------------------ The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
    ·
 27 │         R { s1: S { f }, s2 } = &mut R { s1: S{f: 0}, s2: S{f: 1} }; f; s2;
    │                                      ------------------------------ The type '0x8675309::M::R' does not have the ability 'drop'
    ·
  3 │     struct R { s1: S, s2: S }
    │            - To satisify the constraint, the 'drop' ability would need to be added here
    │

